--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.rmd.awsamplify.noteapp">
 
+    <!-- add these nodes between manifest and application  -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
+        android:name="AndroidGettingStartedApplication"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NoteAPPWithAWSAmplify"
-        tools:targetApi="31">
+        android:theme="@style/Theme.NoteAPPWithAWSAmplify">
         <activity
             android:name=".MainActivity"
             android:exported="true"
