3 - Amplify Backend Auth Config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
 
     // Amplify core dependency
     implementation 'com.amplifyframework:core:1.37.3'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.37.3'
 }
